Correct container overflow, center user name under avatar

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -10,15 +10,14 @@
   background-color: teal;
   color: white;
   margin-left: 20px;
-  border: 5pc ;
+  border: 5pc;
   border-color: #4056A1;
   border-radius: 30px
 }
 
 h2 {
-  display: flex;
   margin: 0px;
-  justify-content: center;
+  text-align: center;
 }
 
 /* cellphones and tablets: maximum width of 768px*/
@@ -26,14 +25,14 @@ h2 {
   .body-container {
     flex-direction: column;
   }
-  
+
   .body-container .headerClass {
     flex-grow: 1;
     background: #4056A1;
     margin: 0;
     margin-top: 120px;
   }
-  
+
   .body-container .container {
     flex-grow: 1;
   }
