--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -9,11 +9,12 @@ form {
   justify-content: center;
   margin-top: 1em;
 }
+
 .button-row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-family:Bungee, sans-serif;
+  font-family: Bungee, sans-serif;
   font-size: 0.75em;
 }
 
@@ -32,7 +33,7 @@ form {
 
 .new-tweet textarea {
   display: flex;
-  font-family:Source Sans Pro , sans-serif;
+  font-family: Source Sans Pro, sans-serif;
   font-size: .5em;
   font-weight: 600;
   margin-top: 30px;
@@ -61,6 +62,4 @@ form {
   color: crimson;
   font-size: 0.75em;
   font-style: italic;
-  /* border: 3px crimson solid;
-  border-radius: 10px; */
 }
